# ClipScribe

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-write.py  pre-write-intelligent.py
.githooks/: pre-commit
app/: config.py  db.py  main.py
app/api/: auth.py  feedback.py  pages.py  stats.py  tasks.py
app/core/: lifecycle.py  middleware.py  paths.py  security.py  timeutil.py
app/models/: __init__.py  artifact.py  feedback.py  task.py
app/schemas/: task.py
app/services/: audio.py  downloader.py  exporter.py  llm.py  pipeline.py  retention.py  text_pipeline.py  transcriber.py
app/services/douyin_vendor/: UPSTREAM.md  __init__.py  api_client.py  ms_token_manager.py  url_parser.py
app/worker/: queue.py
docs/: douyin-download.md  短视频文案系统_MVP方案_内部版.md  短视频文案系统_MVP补充计划.md
docs/adr/: 0001-use-ai-video-transcriber-as-imported-mvp-base.md  0002-use-evil0ctal-douyin-crawler-architecture.md  0003-single-container-single-worker-mvp.md
docs/progress/: 2026-07-14-抖音下载链路修复.md  README.md  项目进度总览.md
scripts/checks/: core_duplication.py  core_quality.py
templates/: base.html  login.html  stats.html  submit.html  task_detail.html  tasks.html
tests/: conftest.py  test_downloader.py  test_pipeline_download.py
