[project]
name = "douyin"
version = "0.1.0"
description = "短视频文案系统 MVP —— 抖音链接转写、清洗、改写工作台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
# flake8 不原生读 pyproject，此处仅作记录；实际以 .flake8 / setup.cfg 为准。
# 检查脚本只跑 critical 集合：E9,F63,F7,F82
max-line-length = 88
extend-ignore = ["E203", "W503"]
